add sam graph 02

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ pre code {
 </div>
 <div id="bubble-lines-upper-class" class="section level4">
 <h4>Bubble Lines: Upper Class</h4>
-<p>&lt;iframe style=‘width: 100%; height: 800px;’ src=‘<a href="https://voyant-tools.org/?panels=cirrus%2Creader%2Ctrends%2Csummary%2Cbubblelines&amp;corpus=043dab63acf80fe8c1bd710d1e3d05f7" class="uri">https://voyant-tools.org/?panels=cirrus%2Creader%2Ctrends%2Csummary%2Cbubblelines&amp;corpus=043dab63acf80fe8c1bd710d1e3d05f7</a> data-external = ’1’ ’&gt;</iframe></p>
+<iframe style='width: 1366px; height: 600px;' src='https://voyant-tools.org/tool/Bubblelines/?query=butler*&query=aristocr*&query=lady*&query=lord*&docId=bccf5f0b9f9079555d572821669bbd6d&docId=ba6caa2f3ae0297428cf12973eaad568&docId=8f372000ecffa986430d64a9a3a4ed4d&docId=ae20267e011c2cfc0313097b9bcb0640&docId=53ac0e9b6e87b2dbe8e3bf557cf4b8f6&docId=741b6828399de7433fbabc9a85857f9c&docId=b12387c6fc22fe8d49981bd887e8441e&docId=6be735e7749c2080d3ba8cffc6323d56&docId=a9b1f539d32997e8edf69216b4c25beb&docId=87e3f9ac243a54960fe3cdb7314b0aec&corpus=8a7b9b17ae69a47043f0cf44c724591a' data-external = '1' ></iframe>
 </div>
 </div>
 <div id="conclusion" class="section level2">
