--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@ pre code {
 
 
 
-<h1 class="title toc-ignore">Voyant</h1>
+<h1 class="title toc-ignore">Understanding Class in Dickens’ and Thackery’s work
+</h1>
 <h4 class="author">Shaun Stanley</h4>
 <h4 class="date">20/09/2021</h4>
 
