--- a/index.html
+++ b/index.html
@@ -208,6 +208,11 @@ pre code {
 
 <p>This shows us the importance of context in any given sentence, as although all words are treated equally by Voyant; it could still mean that the upper class individuals are speaking about people below them and referring to them as ‘poor’ in Thackery’s writings, or using the word poor in a non-economic context, whereas one could be describing their own condition as ‘poor’ in that of Dickens’.</p>
 <p>While drilling down on the word ‘poor’, a word that frequently occurs in the corpuses of both the writers, our findings are surprising. The relative frequency of the word starts out high in Dickens’ corpus, but ends at about 30% lower than the start (based on dates of publishing). While analyzing Thackery’s corpus, we find the opposite— although the frequency starts high, it takes a huge dip only to then rise in his later works, ending at 3 times the magnitude of the dip. So far, we cannot connect the dots to understand why this happens, as Dickens is supposed to be writing about the working class and Thackery about the upper.</p>
+
+<iframe style='width: 870px; height: 600px;' src='https://voyant-tools.org/tool/Trends/?query=poor&corpus=9894efa477941cbe4edc291c5dcb6ba1' data-external='1'></iframe>
+
+<iframe style='width: 870px; height: 600px;' src='https://voyant-tools.org/tool/Trends/?query=colonel&corpus=43042bfea10fd84465a3cd8230aa6b47' data-external='1'></iframe>
+
 <p>Another interesting occurrence is the relative frequency of the word ‘lord.’ Dickens’ corpus rises abruptly only to fall in its early stages and ends much lower than its peak in the beginning, Thackeray’s corpus shows the inverse— it starts low and rises gradually, only to rise abruptly towards the end of the corpus and fall again. We see a similar result for the term ‘aristocrat*’— the relative frequency starts off low only to peak towards the end in Dickens’ corpus, whereas it starts off high and then falls abruptly in that of Thackery’s. These inverse charts may suggest a change in their writings with time, however that cannot be concluded on the basis of this metric alone.</p>
 </div>
 <div id="collocation-and-correlation" class="section level2">
