--- a/index.html
+++ b/index.html
@@ -225,6 +225,11 @@ pre code {
 <iframe style='width: 870px; height: 600px;' src='https://voyant-tools.org/tool/CorpusCollocates/?query=lodg*&query=shabby*&query=factory*&query=labour*&corpus=ea91f90d230617aaabfd4b4f1ce0443c' data-external = '1'></iframe>
 
 <p>To depict the change in class structures and the approaches to the same, we compared common terms like lady, lord, butler and aristocrat to gain a fair representation of individuals belonging to the upper class and terms like labour, factory, lodge and shabby to describe the lower class. Dickens has a high ratio of references to the richer classes vis a vis references to the lower class, in an approximately 15:2 ratio. Thackeray, on the other hand, has an even higher ratio of references to the rich versus the poor, in an approximately 14:1 ratio. With an almost doubled difference in references to the rich, Dickens’ work clearly leans towards the lower class whereas Thackery’s work relies on the upper and middle class. The collocates also show us the authors’ approaches to classes. Dickens uses more positive terms in collocation with words like lodge, whereas Thackery used these terms in passing and in reference to places, but rarely as an eventful location itself. This does provide a positive understanding of our hypotheses. However, the correlations provide a different story. The correlations are extremely weak and not significant. Without the correlations, it might be easy to conclude that our hypothesis was correct. However, the numerical interpretation of correlations offers another story, one that conclusively proves our hypothesis as false.</p>
+
+<iframe style='width: 870px; height: 600px;' src='https://voyant-tools.org/tool/Correlations/?query=lady*&query=lord*&query=arist*&query=butler*&view=corpuscollocates&corpus=ea91f90d230617aaabfd4b4f1ce0443c' data-external = '1'></iframe>
+
+<iframe style='width: 870px; height: 600px;' src='https://voyant-tools.org/tool/Correlations/?query=lodg*&query=labour*&query=factory*&query=shabby*&corpus=0b854417f0ea83b7e82d5dc9cbb333a7' data-external = '1'></iframe>
+
 </div>
 <div id="third-tool-bubble-lines" class="section level2">
 <h2>Third tool: Bubble Lines</h2>
