--- a/index.html
+++ b/index.html
@@ -193,8 +193,12 @@ pre code {
 <div id="frequency-comparison" class="section level2">
 <h2>Frequency Comparison</h2>
 <p>When having a look at the broad word frequency comparison between Dickens and Thackery, we find interesting results. Thackeray has a much higher frequency of words like ‘lord’, ‘gentleman’, ‘colonel’, ‘captain’, ‘money’— all words that denote text discussing the upper-class.</p>
+
+<caption>Frequency of words representing the Upper Class in Thackery's work</caption>
 <iframe style="width: 870px; height: 600px;" src="https://voyant-tools.org/tool/Trends/?query=captain&amp;query=gentleman&amp;query=lord&amp;query=money&amp;query=colonel&amp;corpus=43042bfea10fd84465a3cd8230aa6b47" data-external="1">
 </iframe>
+
+
 <p>However, when we have a look at the frequency tool for Dickens’ corpus, we find a similar result— words that represent the upper class appear frequently. Words such as ‘sir’, ‘lady’, ‘gentleman’, ‘money’, ‘master’ are just as common.</p>
 
 <iframe style='width: 870px; height: 600px;' src='https://voyant-tools.org/tool/Trends/?query=sir&query=lady&query=gentleman&query=money&query=master&corpus=9894efa477941cbe4edc291c5dcb6ba1' data-external='1'></iframe>
@@ -220,6 +224,10 @@ pre code {
 <h2>Collocation and Correlation</h2>
 <p>The collocates depicts terms and their proximity to other terms throughout texts. Understanding the proximity of words within our chosen authors allows us to define how these terms were used, providing some insight into the frequency and context. An example of this is how the term Lady is often used to refer to Lady Castlewood, a character in a Thackery novel. First, since the term appears in conjunction with a name allows us to rule out the possibility of undefinable connotations like satire. Looking at the collocates also allows us to ascertain the importance of a character and thereby the relevance of their class in the tale. A novel with a high frequency of collocations of Lady and a name is unlikely to accurately represent the lower classes. A novel with the collocates of lodge being old immediately sets a very different tone and representation of the lower classes. Understanding the term along with the frequency allows us to accurately determine the use of this data in our claims.</p>
 
+
+<figure>
+    <figcaption></figcaption>
+</figure>
 <iframe style='width: 870px; height: 600px;' src='https://voyant-tools.org/tool/CorpusCollocates/?query=aristo*&query=butler*&query=lord*&query=lady*&corpus=4304628568afdb368f88e29eff15ac16' data-external = '1'></iframe
 
 <iframe style='width: 1366px; height: 600px;' src='https://voyant-tools.org/tool/CorpusCollocates/?query=aristo*&query=lord*&query=lady*&query=butler*&corpus=2e74122b2c863d77f14372ea5904c5dd' data-external = '1'></iframe>
