Make caption italic

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ pre code {
 <h2>Frequency Comparison</h2>
 <p>When having a look at the broad word frequency comparison between Dickens and Thackery, we find interesting results. Thackeray has a much higher frequency of words like ‘lord’, ‘gentleman’, ‘colonel’, ‘captain’, ‘money’— all words that denote text discussing the upper-class.</p>
 
-<caption>Frequency of words representing the Upper Class in Thackery's work</caption>
+<caption><i>Graph 1:Frequency of words representing the Upper Class in Thackery's work</i></caption>
 <iframe style="width: 870px; height: 600px;" src="https://voyant-tools.org/tool/Trends/?query=captain&amp;query=gentleman&amp;query=lord&amp;query=money&amp;query=colonel&amp;corpus=43042bfea10fd84465a3cd8230aa6b47" data-external="1">
 </iframe>
 
