--- a/index.html
+++ b/index.html
@@ -194,12 +194,14 @@ pre code {
 <h2>Frequency Comparison</h2>
 <p>When having a look at the broad word frequency comparison between Dickens and Thackery, we find interesting results. Thackeray has a much higher frequency of words like ‘lord’, ‘gentleman’, ‘colonel’, ‘captain’, ‘money’— all words that denote text discussing the upper-class.</p>
 
-<caption><i>Graph 1:Frequency of words representing the Upper Class in Thackery's work</i></caption>
+<caption><i>Graph 1: Frequency of words representing the Upper Class in Thackery's work</i></caption>
 <iframe style="width: 870px; height: 600px;" src="https://voyant-tools.org/tool/Trends/?query=captain&amp;query=gentleman&amp;query=lord&amp;query=money&amp;query=colonel&amp;corpus=43042bfea10fd84465a3cd8230aa6b47" data-external="1">
 </iframe>
 
 
 <p>However, when we have a look at the frequency tool for Dickens’ corpus, we find a similar result— words that represent the upper class appear frequently. Words such as ‘sir’, ‘lady’, ‘gentleman’, ‘money’, ‘master’ are just as common.</p>
+
+<caption><i>Graph 2: Frequency of words representing the Upper Class in Dickens' work</i></caption>
 
 <iframe style='width: 870px; height: 600px;' src='https://voyant-tools.org/tool/Trends/?query=sir&query=lady&query=gentleman&query=money&query=master&corpus=9894efa477941cbe4edc291c5dcb6ba1' data-external='1'></iframe>
 
@@ -207,15 +209,23 @@ pre code {
 
 <p>What is also incredibly interesting is the fact that the word ‘poor’ occurs frequently in the works of both writers. Surprisingly, Thackery’s corpus has a frequency of 2722 for ‘poor*’, but Dickens’ corpus has only 1825 occurrences.</p>
 
+
+<caption><i>Graph 3: Frequency of the word 'poor' in Thackery's work</i></caption>
 <iframe style='width: 870px; height: 200px;' src='https://voyant-tools.org/tool/CorpusTerms/?query=poor*&corpus=43042bfea10fd84465a3cd8230aa6b47' data-external='1'></iframe>
 
+
+<caption><i>Graph 4: Frequency of the word 'poor' in Dickens' work</i></caption>
 <iframe style='width: 870px; height: 200px;' src='https://voyant-tools.org/tool/CorpusTerms/?query=poor*&corpus=9894efa477941cbe4edc291c5dcb6ba1' data-external='1'></iframe>
 
 <p>This shows us the importance of context in any given sentence, as although all words are treated equally by Voyant; it could still mean that the upper class individuals are speaking about people below them and referring to them as ‘poor’ in Thackery’s writings, or using the word poor in a non-economic context, whereas one could be describing their own condition as ‘poor’ in that of Dickens’.</p>
 <p>While drilling down on the word ‘poor’, a word that frequently occurs in the corpuses of both the writers, our findings are surprising. The relative frequency of the word starts out high in Dickens’ corpus, but ends at about 30% lower than the start (based on dates of publishing). While analyzing Thackery’s corpus, we find the opposite— although the frequency starts high, it takes a huge dip only to then rise in his later works, ending at 3 times the magnitude of the dip. So far, we cannot connect the dots to understand why this happens, as Dickens is supposed to be writing about the working class and Thackery about the upper.</p>
 
+
+<caption><i>Graph 4: Frequency of the word 'poor' in Dickens' work</i></caption>
 <iframe style='width: 870px; height: 600px;' src='https://voyant-tools.org/tool/Trends/?query=poor&corpus=9894efa477941cbe4edc291c5dcb6ba1' data-external='1'></iframe>
 
+
+<caption><i>Graph 5: Frequency of the word 'colonel' in Thackery's work</i></caption>
 <iframe style='width: 870px; height: 600px;' src='https://voyant-tools.org/tool/Trends/?query=colonel&corpus=43042bfea10fd84465a3cd8230aa6b47' data-external='1'></iframe>
 
 <p>Another interesting occurrence is the relative frequency of the word ‘lord.’ Dickens’ corpus rises abruptly only to fall in its early stages and ends much lower than its peak in the beginning, Thackeray’s corpus shows the inverse— it starts low and rises gradually, only to rise abruptly towards the end of the corpus and fall again. We see a similar result for the term ‘aristocrat*’— the relative frequency starts off low only to peak towards the end in Dickens’ corpus, whereas it starts off high and then falls abruptly in that of Thackery’s. These inverse charts may suggest a change in their writings with time, however that cannot be concluded on the basis of this metric alone.</p>
