--- a/index.html
+++ b/index.html
@@ -254,7 +254,14 @@ pre code {
 <iframe style='width: 870px; height: 600px;' src='https://voyant-tools.org/tool/Correlations/?query=lady*&query=lord*&query=arist*&query=butler*&view=corpuscollocates&corpus=ea91f90d230617aaabfd4b4f1ce0443c' data-external = '1'></iframe>
 
 <caption><i>Graph 11: Correlations for words representing the Upper Class in Thackery's work</i></caption>
+
+<iframe style='width: 1366px; height: 600px;' src='https://voyant-tools.org/tool/Correlations/?query=aristo*&query=lord*&query=lady*&query=butler*&view=corpuscollocates&corpus=2e74122b2c863d77f14372ea5904c5dd' data-external = '1'></iframe>
+
+<caption><i>Graph 12: Correlations for words representing the Lower Class in Dickens' work</i></caption>
 <iframe style='width: 870px; height: 600px;' src='https://voyant-tools.org/tool/Correlations/?query=lodg*&query=labour*&query=factory*&query=shabby*&corpus=0b854417f0ea83b7e82d5dc9cbb333a7' data-external = '1'></iframe>
+
+<caption><i>Graph 13: Correlations for words representing the Lower Class in Thackery's work</i></caption>
+<iframe style='width: 1366px; height: 600px;' src='https://voyant-tools.org/tool/Correlations/?query=shabby*&query=lodg*&query=labour*&query=factory*&view=corpuscollocates&corpus=2e74122b2c863d77f14372ea5904c5dd' data-external = '1'></iframe>
 
 </div>
 <div id="third-tool-bubble-lines" class="section level2">
